@@ -1492,6 +1492,21 @@ START_TEST(evas_textblock_text_getters)
    fail_if(strcmp(evas_textblock_cursor_range_text_get(cur, main_cur,
             EVAS_TEXTBLOCK_TEXT_MARKUP), "aaa"));
 
+   /* Markup to plain */
+     {
+        char *tmp = evas_textblock_markup_to_plain(tb, "<br/>aa<\n/>bb<\t/>");
+        fail_if(strcmp(tmp, "\naa\nbb\t"));
+        free(tmp);
+
+        tmp = evas_textblock_markup_to_plain(tb, "a<item></item>");
+        fail_if(strcmp(tmp, "a\xEF\xBF\xBC"));
+        free(tmp);
+
+        tmp = evas_textblock_markup_to_plain(tb, "a&nbsp;");
+        fail_if(strcmp(tmp, "a\xC2\xA0"));
+        free(tmp);
+     }
+
    END_TB_TEST();
 }
 END_TEST
